# cpp-coding-challenge-CGM

./: .clang-format  CMakeLists.txt  README.md  compile_flags.txt  conanfile.py  rebuild.sh
.devcontainer/: Dockerfile  devcontainer.json
src/: DeepThought.cpp  DeepThought.hpp  DeepThoughtError.cpp  DeepThoughtError.hpp  main.cpp
test/: tests.cpp
